# BSM-BullShit-Meter

./: .dnconfig  .dnhistory  .gitignore  BSM_Architecture.md  BSM_Strengths_Weaknesses.md  CLAUDE.md  DEVELOPER_GUIDE.md  INSTALL.md  README.md  TASK_LIST.md  WINDOWS_DEPLOYMENT.md  bsm.spec  build.py  deploy_windows.bat  deploy_windows.ps1  install_bsm.bat  integration_test.py  launch_bsm.py  pyproject.toml  requirements.txt  run.py  setup.py  simple_settings_test.py
.claude/: settings.local.json
.github/workflows/: ci.yml
bsm/: __init__.py  main.py  main_broken.py  main_clean.py
bsm/core/: README.md  __init__.py  ai_providers.py  async_database.py  async_manager.py  database.py  plugin_framework.py  security.py  settings.py
bsm/ui/: README.md  __init__.py  context_window.py  result_window.py  results_window.py  screenshot_selector.py  settings_window.py  ui_enhancements.py
bsm/utils/: README.md  __init__.py  enhanced_ocr.py  hotkey_manager.py  improved_hotkey_manager.py  macos_hotkey_manager.py  text_capture.py
installer/windows/: bsm-installer.nsi
